# ClashSharp

./: .editorconfig  .gitignore  CodingStyle.md  README-zh.md  README.md
.github/workflows/: ci.yml
ClashSharp/: ClashSharp.slnx
ClashSharp/ClashSharp/: App.xaml  App.xaml.cs  ClashSharp.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
ClashSharp/ClashSharp.MihomoService/: ClashSharp.MihomoService.csproj  MihomoServiceOptions.cs  MihomoWorker.cs  Program.cs
ClashSharp/ClashSharp.Tests/: AssemblyInfo.cs  ClashSharp.Tests.csproj
ClashSharp/ClashSharp/Binaries/: mihomo-NOTICE.txt
ClashSharp/ClashSharp/Components/: DialogOptionRow.xaml  DialogOptionRow.xaml.cs  GuidedDialog.xaml  GuidedDialog.xaml.cs  MasterInfoTile.xaml  MasterInfoTile.xaml.cs  MasterModeButton.xaml  MasterModeButton.xaml.cs  SearchableOptionList.xaml  SearchableOptionList.xaml.cs  SettingRow.xaml  SettingRow.xaml.cs  StartupGuideDialog.xaml  StartupGuideDialog.xaml.cs
ClashSharp/ClashSharp/Converters/: BooleanToVisibilityConverter.cs  HexColorBrushConverter.cs
ClashSharp/ClashSharp/Model/: ActiveConnection.cs  AppAccentColorMode.cs  AppLanguage.cs  AppThemeMode.cs  ApplicationActionKind.cs  ClashDataPackageScope.cs  ClashSharpMode.cs  (+27 more)
ClashSharp/Installer/: Cargo.toml  backend.py  build.ps1  build.rs  main.py
ClashSharp/Installer/src/: lib.rs  main.rs  metadata.rs
ClashSharp/Installer/ui/: app.js  index.html  main.slint  style.css
ClashSharp/SandboxTest/: Cargo.toml  README.md  Run-SandboxTest.ps1
Tools/: Update-Mihomo.ps1  build_installer.py
(+185 files in other folders)
