[package]
name = "clashsharp-installer"
version = "1.0.0"
edition = "2024"
description = "Clash# Native Windows Installer"

[[bin]]
name = "ClashSharp-Installer"
path = "src/main.rs"

[dependencies]
slint = "1"
i-slint-backend-winit = "1"

[build-dependencies]
slint-build = "1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
